# simple-audio-switch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.github/workflows/: build-and-release.yml  ci.yml  release.yml
src/: AudioSwitch.cpp  AudioSwitch.h  Device.h  PolicyConfig.h  WinError.h  main.cpp
